add branch trigger condition

--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,8 @@
 name: learn-github-actions
-on: [push]
+on:
+  push:
+    branches:
+      - smashpunk-path-1
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
