--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,7 +2,7 @@ name: learn-github-actions
 on:
   push:
     branches:
-      - smashpunk-path-1
+      - smashpunk-patch-1
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
